<resources>
    <string name="app_name">SOLVO</string>
    <string name="usernam">chucho123</string>
    <string name="correoe">chucho123@gmail.com</string>
    <string name="pass">*******</string>
    <string name="numTel">3103186693</string>
    <string name="confNum">000000</string>
    <string name="title_activity_menu_prin">MenuPrin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuraciones</string>
    <string name="title_activity_restaurante">Map</string>
    <string name="title_activity_rutausuarioestb">Map</string>
    <string name="title_activity_parqueadero">Map</string>
    <string name="title_activity_alojamiento">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_est_servicio">Map</string>
    <string name="title_activity_peaje">Map</string>
    <string name="title_activity_taller">Map</string>
</resources>
